# artifetch

./: Cargo.toml
src/: app.rs  asset.rs  cli.rs  env.rs  etag.rs  lib.rs  main.rs  provider.rs  registry.rs  release.rs  repo.rs  target.rs
src/app/: config.rs  data.rs  handlers.rs  paths.rs  updater.rs
src/app/handlers/: assets.rs  providers.rs  releases.rs  repos.rs  targets.rs
src/provider/: github.rs
src/provider/github/: client.rs
