[package]
name = "ghrr"
version = "0.1.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
env_logger = "0.6.2"
serde = "1.0.97"
futures = "0.1.28"
owning_ref = "0.4.0"
