[package]
name = "artifetch"
version = "0.1.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2.4"
actix-web = { version = "1.0.5", default-features = false, features = ["brotli", "flate2-zlib", "fail"] }
env_logger = "0.6.2"
futures = "0.1.28"
log = "0.4.8"
owning_ref = "0.4.0"
rand = "0.7.0"
reqwest = { version = "0.9.19", default-features = false, features = ["rustls-tls"] }
serde = "1.0.97"
tokio-timer = "0.2.11"
