[package]
name = "artifetch"
version = "0.1.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2.4"
actix-web = { version = "1.0.5", default-features = false, features = ["brotli", "flate2-zlib", "fail"] }
dirs-sys = "0.3.4"
env_logger = "0.6.2"
futures = "0.1.28"
lazy_static = "1.3.0"
log = "0.4.8"
owning_ref = "0.4.0"
rand = "0.7.0"
reqwest = { version = "0.9.19", default-features = false, features = ["rustls-tls"] }
serde = "1.0.97"
serde_json = "1.0.40"
structopt = { version = "0.2.18", default-features = false, features = ["suggestions", "wrap_help"] }
tokio-timer = "0.2.11"
